# ollama_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  FEEDBACK_LOOP_PLAN.md  LICENSE  PLAN.md  PROJECT_PLAN.md  README.md  SPEED_OPTIMIZATION_PLAN.md  coverage.xml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
apps/: __init__.py
apps/cli/: main.py  (+1 more)
config/: config.yaml  config.yaml.example  instant_rules.yaml  intent_routes.yaml  routing_anchors.yaml
core/: app_runtime.py  async_utils.py  auto_evaluator.py  auto_scheduler.py  auto_scheduler_actions.py  auto_scheduler_delivery.py  automation_callables.py  config.py  constants.py  context_compressor.py  crest_discovery.py  crest_parser.py  db_migrations.py  dft_discovery.py  dft_index.py  dft_query.py  embedding_utils.py  engine.py  engine_background.py  engine_context.py  engine_delegates.py  engine_management.py  engine_mixins.py  engine_models.py  engine_planner.py  engine_rag.py  engine_reviewer.py  engine_routing.py  engine_status.py  engine_summary.py  engine_tracking.py  engine_types.py  enums.py  feedback_manager.py  i18n.py  instant_responder.py  intent_router.py  lemonade_client.py  lemonade_delegates.py  lemonade_errors.py  (+44 more)
docs/: architecture.md
scripts/: Modelfile.template  bootstrap.sh  check_requirements_lock.sh  configure_windows_lemonade.sh  deploy_finetuned.sh  finetune_unsloth.py  healthcheck.sh  install_boot_service.sh  run_bot.sh  run_host_agent.sh  setup.sh  sim_host_agent.py  soak_monitor.sh  unload_non_primary_embeddings.py  up.sh  update_wsl_hosts.sh
(+98 files in other folders)
