[project]
name = "ollama-bot"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.mypy]
python_version = "3.11"
files = ["core", "apps", "main.py"]
ignore_missing_imports = true
check_untyped_defs = true
show_error_codes = true
warn_unused_ignores = true
